Change a thumbnail, fix margins in portfolio on mobile

--- a/_sass/_private.scss
+++ b/_sass/_private.scss
@@ -69,7 +69,7 @@ h4 {
 .back-btn {
   display: flex;
   justify-content: flex-end;
-  margin: 1rem 0 2rem;
+  margin: 2rem 1rem;
 
   a {
     text-decoration: none;
