--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -188,6 +188,10 @@ footer {
 
 .images {
   .img-responsive {
+    @include max-mobile {
+      margin-bottom: 1rem;
+    }
+
     margin-bottom: 4rem;
   }
 }
@@ -201,7 +205,7 @@ footer {
   font-size: 1.2em;
   color: $text-color;
   font-family: 'Arial', sans-serif;
-  line-height: 1.3rem;
+  line-height: 1.6rem;
   text-rendering: optimizelegibility;
   text-decoration: none;
   margin: 1rem;
